2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/dumper.c: fix a missing switch of default auth to BSDTCP

2011-06-01  Dustin J. Mitchell <dustin@mozilla.com>
	* perl/Amanda/Holding.pm: fix _is_datestamp regexp to be anchored and
	  handle errors better (logging and ignoring)

2011-06-01  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: fix a memory leak in xml_scripts()

2011-06-01  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: fix a memory leak in xml_application()

2011-06-01  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/cmdline.c: fix braino with g_strjoinv() usage,
	  g_strjoinv("xx", {   NULL, }) will return an empty string, not NULL

2011-05-31  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.[ch]: change method signature for
	  validate_optionstr(), it now returns a gchar ** instead of a
	  GPtrArray *, and the result is dynamicallu allocated
	* server-src/amcheck.c, server-src/amindexd.c, server-src/driver.c,
	  server-src/planner.c: adapt call sites; fix memory leak for the two
	  latter, and wrong behaviour for all of them (you cannot
	  g_ptr_array_free(..., TRUE) on statically allocated members)

2011-05-31  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Move AMANDA_S3_DEVICE to do libcurl detection later.

2011-05-31  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Update for 3.3.0 release.

2011-05-31  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: fix unbalanced tag in xml_estimate()

2011-05-31  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: avoid potential SIGSEGV by trying to assign to
	  local variables "their_features" too soon in optionstr() and
	  xml_optionstr(); also remove an unneeded local variable in both
	  functions

2011-05-31  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: remove unneeded if(var) test in
	  xml_optionstr(), the variable tested was never NULL
